Fix link for css file

--- a/hobbies/index.html
+++ b/hobbies/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=none" />
     <meta charset="utf-8" />
     <title>Ibrahim Tomiwa Hobbies</title>
-    <link rel="stylesheet" href="..assets/css/screen.css">
+    <link rel="stylesheet" href="../project-two/assets/css/screen.css">
   </head>
   <body>
     <header id="header">
