Since both project-one and project-two are under the same directory '../' does not work as in project-one since ../resume has two destination. This commit fixed the error.

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       <nav id="navigation">
         <ul>
           <li>Home</li>
-          <li><a href="../resume">Resume</a></li>
-          <li><a href="../hobbies">Hobbies</a></li>
+          <li><a href="../project-two/resume">Resume</a></li>
+          <li><a href="../project-two/hobbies">Hobbies</a></li>
         </ul>
       </nav>
     </header>
