--- a/resume/index.html
+++ b/resume/index.html
@@ -11,9 +11,9 @@
       <h1>Ibrahim Tomiwa</h1>
       <nav id="navigation">
         <ul>
-          <li><a href="../">Home</a></li>
+          <li><a href="../project-two/">Home</a></li>
           <li>Resume</li>
-          <li><a href="../hobbies">Hobbies</a></li>
+          <li><a href="../project-two/hobbies">Hobbies</a></li>
         </ul>
       </nav>
     </header>
