--- a/hobbies/index.html
+++ b/hobbies/index.html
@@ -11,8 +11,8 @@
       <h1>Ibrahim Tomiwa</h1>
       <nav id="navigation">
         <ul>
-          <li><a href="../">Home</a></li>
-          <li><a href="../resume/">Resume</a></li>
+          <li><a href="../project-two/">Home</a></li>
+          <li><a href="../project-two/resume/">Resume</a></li>
           <li>Hobbies</li>
         </ul>
       </nav>
