Fix minor bug in file paths

--- a/resume/index.html
+++ b/resume/index.html
@@ -4,16 +4,16 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=none" />
     <meta charset="utf-8" />
     <title>Ibrahim Tomiwa About</title>
-    <link rel="stylesheet" href="../project-two/assets/css/screen.css">
+    <link rel="stylesheet" href="../assets/css/screen.css">
   </head>
   <body>
     <header id="header">
       <h1>Ibrahim Tomiwa</h1>
       <nav id="navigation">
         <ul>
-          <li><a href="../project-two/">Home</a></li>
+          <li><a href="../">Home</a></li>
           <li>Resume</li>
-          <li><a href="../project-two/hobbies">Hobbies</a></li>
+          <li><a href="../hobbies">Hobbies</a></li>
         </ul>
       </nav>
     </header>
