--- a/hobbies/index.html
+++ b/hobbies/index.html
@@ -4,15 +4,15 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=none" />
     <meta charset="utf-8" />
     <title>Ibrahim Tomiwa Hobbies</title>
-    <link rel="stylesheet" href="../project-two/assets/css/screen.css">
+    <link rel="stylesheet" href="../assets/css/screen.css">
   </head>
   <body>
     <header id="header">
       <h1>Ibrahim Tomiwa</h1>
       <nav id="navigation">
         <ul>
-          <li><a href="../project-two/">Home</a></li>
-          <li><a href="../project-two/resume/">Resume</a></li>
+          <li><a href="../">Home</a></li>
+          <li><a href="../resume/">Resume</a></li>
           <li>Hobbies</li>
         </ul>
       </nav>
