--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=none" />
     <meta charset="utf-8" />
     <title>Ibrahim Tomiwa Home</title>
-    <link rel="stylesheet" href="../project-two/assets/css/screen.css">
+    <link rel="stylesheet" href="/assets/css/screen.css">
   </head>
   <body>
     <header id="header">
@@ -12,8 +12,8 @@
       <nav id="navigation">
         <ul>
           <li>Home</li>
-          <li><a href="../project-two/resume">Resume</a></li>
-          <li><a href="../project-two/hobbies">Hobbies</a></li>
+          <li><a href="resume">Resume</a></li>
+          <li><a href="hobbies">Hobbies</a></li>
         </ul>
       </nav>
     </header>
