Add nav class name to link

--- a/resume/index.html
+++ b/resume/index.html
@@ -10,7 +10,7 @@
     <header id="header">
       <h1>Ibrahim Tomiwa</h1>
       <nav id="navigation">
-        <ul>
+        <ul class="nav">
           <li><a href="../">Home</a></li>
           <li>Resume</li>
           <li><a href="../hobbies">Hobbies</a></li>
