--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header id="header">
       <h1>Ibrahim Tomiwa</h1>
       <nav id="navigation">
-        <ul>
+        <ul class="nav">
           <li>Home</li>
           <li><a href="resume">Resume</a></li>
           <li><a href="hobbies">Hobbies</a></li>
