--- a/hobbies/index.html
+++ b/hobbies/index.html
@@ -13,7 +13,7 @@
         <ul class="nav">
           <li><a href="../">Home</a></li>
           <li><a href="../resume/">Resume</a></li>
-          <li>Hobbies</li>
+          <li><a href="#">Hobbies</a></li>
         </ul>
       </nav>
     </header>
