Beautify the footer

--- a/hobbies/index.html
+++ b/hobbies/index.html
@@ -55,19 +55,19 @@
     <footer id="footer">
       <ul class="contact">
         <li class="email">
-          <a
-        href="mailto:tibrahim@hawk.iit.edu">Email-Work</a>
+          <a href="mailto:tibrahim@hawk.iit.edu"><img src="../assets/images/gmail.jpg" alt="Gmail logo"/></a>
         </li>
         <li class="facebook-url">
-          <a href="https://www.facebook.com/tomiwa.ibrahim.311">Facebook</a>
+          <a href="https://www.facebook.com/tomiwa.ibrahim.311"><img src="../assets/images/facebook.png" alt="Facebook logo"/></a>
         </li>
         <li class="twitter-url">
-          <a href="https://twitter.com/Tomiwa154">Twitter</a>
+          <a href="https://twitter.com/Tomiwa154"><img src="../assets/images/twitter.png" alt="Twitter logo"/></a>
         </li>
         <li class="instagram-url">
-          <a href="https://www.instagram.com/tomiwa.ibrahim.311/">Instagram</a>
+          <a href="https://www.instagram.com/tomiwa.ibrahim.311/"><img src="../assets/images/instagram.jpg" alt="Instagram logo"/></a>
         </li>
       </ul>
+      <p>Site &copy; Ibrahim Tomiwa. All rights reserved.</p>
     </footer>
   </body>
 </html>
