--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=none" />
     <meta charset="utf-8" />
     <title>Ibrahim Tomiwa Home</title>
-    <link rel="stylesheet" href="../css/screen.css">
+    <link rel="stylesheet" href="../assets/css/screen.css">
   </head>
   <body>
     <header id="header">
